tests/integration/tests/examples/check-commands/CHECK-EMPTY/Failure/CHECK-EMPTY.itest
; RUN: printf "String1\nString2" | %expect_exit 1 %FILECHECK_EXEC "%S/CHECK-EMPTY.check" | %FILECHECK_EXEC "%s"

; CHECK: {{^.*}}CHECK-EMPTY.check:2:13: error: CHECK-EMPTY: expected string not found in input
; CHECK: CHECK-EMPTY:
; CHECK:             ^
; CHECK: <stdin>:2:1: note: scanning from here
; CHECK: String2
; CHECK: ^
; CHECK-EMPTY:
